--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -291,6 +291,9 @@ body
   background: url('images/sydney.png')
   background-size: cover
 
+  +respond-to-retina
+    background: url('images/sydney@2x.png')
+
 .top-offers-link__upper--bangkok
   background: url('images/bangkok.png')
   background-size: cover
