--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -1161,3 +1161,39 @@
   .section-top-offers__call-button
     margin-top: 16px
     margin-left: 0
+
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2)
+  .page-header
+    background: url('images/header-bg@2x.png') center no-repeat
+    background-size: cover
+
+  .top-offers-link__upper--sydney
+    background: url('images/sydney@2x.png')
+    background-size: cover
+
+  .top-offers-link__upper--bangkok
+    background: url('images/bangkok@2x.png')
+    background-size: cover
+
+  .top-offers-link__upper--venice
+    background: url('images/venice@2x.png')
+    background-size: cover
+
+  .top-offers-link__upper--telaviv
+    background: url('images/telaviv@2x.png')
+    background-size: cover
+
+  .section__stats-item:last-child
+    &:before
+      background: url('images/support@2x.png') center no-repeat
+      background-size: cover
+
+  .page-footer
+    background: url('images/footer-bg@2x.png') center no-repeat
+    background-size: cover
+
+  .popup-thank-you
+    background: url('images/popup-bg@2x.png') center no-repeat
+    background-size: cover
+
