--- a/src/styl/_offers.styl
+++ b/src/styl/_offers.styl
@@ -34,7 +34,7 @@
   line-height: 24px
   font-weight: 500
   color: #797f92
-  padding: 29px 0 27px 15px
+  padding: 25px 0 23px 15px
   text-transform: uppercase
   word-wrap: normal
 
@@ -87,7 +87,7 @@
   &:before
     content: '03'
 
-.primary-texy--offer
+.primary-text--offer
   padding-bottom: 56px
 
 .section__trip-list
