--- a/src/styl/_variable.styl
+++ b/src/styl/_variable.styl
@@ -1,7 +1,13 @@
 $color_white = #ffffff
 $main_color = #0DA4F0
+$theme_red = #fc5245
 
 $ultraThin()
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   font-smoothing: grayscale
+
+$color_white = #ffffff
+$main_color = #0DA4F0
+
+$container-max-width = 1136px
