--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -3,6 +3,15 @@
 @import "resset-v2.css"
 @import "_variable.styl"
 @import "_mixins.styl"
+@import "_common.styl"
+
+@import "blocks/_left-line.styl"
+@import "blocks/_section.styl"
+@import "blocks/_services.styl"
+@import "blocks/_team.styl"
+@import "blocks/_process.styl"
+@import "blocks/_contact.styl"
+
 @import "_style.styl"
 @import "_offers.styl"
 @import "_media.styl"
