--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -35,6 +35,9 @@
   .wrapper
     padding: 48px 24px 0 24px
 
+  .wrapper--offer
+    padding-top: 84px
+
   .section__title
     padding-left: 34px
 
