--- a/src/styl/_mixins.styl
+++ b/src/styl/_mixins.styl
@@ -2,6 +2,14 @@ respond-to($media)
   @media only screen and (max-width: $media)
     {block}
 
+respond-from($media)
+  @media only screen and (min-width: $media)
+    {block}
+
+respond-to-height($height)
+  @media all and (max-height: $height)
+    {block}
+
 respond-to-retina
   @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2)
     {block}
