--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -187,6 +187,8 @@
   .page-header
     padding: 0
     padding-bottom: 48px
+    background: url('images/header-bg-768@2x.png') center no-repeat
+    background-size: cover
 
   .main-title
     font-size: 48px
@@ -399,6 +401,8 @@
 
   .page-footer
     padding: 64px 24px 32px 24px
+    background: url('images/footer-bg-768@2x.png') center no-repeat
+    background-size: cover
 
   .section__btn-container--footer
     margin-bottom: 64px
@@ -564,6 +568,11 @@
     position: relative
 
 @media (max-width: 767px)
+  .page-header
+    min-height: auto
+    background: url('images/header-bg-320@2x.png') center no-repeat
+    background-size: cover
+
   .wrapper
     padding: 32px 16px 0 16px
 
@@ -860,6 +869,8 @@
 
   .page-footer
     padding: 32px 16px 24px 16px
+    background: url('images/footer-bg-320@2x.png') center no-repeat
+    background-size: cover
 
   .section__btn-container--footer
     flex-direction: column
