--- a/src/styl/blocks/_section.styl
+++ b/src/styl/blocks/_section.styl
@@ -41,3 +41,16 @@
 
     +respond-to(767px)
       width: 100%
+
+
+.section--services,
+.section--book,
+.section--contact
+  .section-top-offers__call
+    +respond-to(767px)
+      position: static
+      width: auto
+      margin-top: 32px
+      margin-bottom: 16px
+      right: 0
+      transform: none
