--- a/src/styl/blocks/_contact.styl
+++ b/src/styl/blocks/_contact.styl
@@ -8,6 +8,12 @@
     flex-direction column
     align-items center
 
+.page-header--contact
+  min-height: auto
+
+.page-header__text--contact
+  visibility: hidden
+
 .contact__wrapper
   width 716px
   
@@ -92,10 +98,10 @@
   border none
   border-radius 40px
   font-size 14px
-  line-height 56px
+  line-height 36px
   font-weight 500
   color #fff
-  width 244px
+  width 181px
   cursor pointer
   text-transform uppercase
   transition .25s ease-out
