--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -1054,11 +1054,11 @@ input:focus
   .section__sub-title--popup
     padding-top: 24px
 
+  .popup__phone-wrapper
+    width: auto
+
   input[type="tel"]
     width: 310px
-
-  .popup__select
-    right: -60px
 
 .popup-thank-you
   position: relative
