--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -179,9 +179,7 @@
     &:nth-child(3n)
       margin-right: 0
 
-  .section--asia,
-  .section--europe,
-  .section--middle-east
+  .section--offers
     margin-bottom: 64px
 
 @media (min-width: 1023px) and (max-width: 1439px)
@@ -555,11 +553,8 @@
     br
       display: none
 
-  .section--asia,
-  .section--europe,
-  .section--middle-east
+  .section--offers
     margin-bottom: 48px
-
 
   .page-header--offers
     min-height: 276px
