--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -19,6 +19,9 @@
     &:after
       left: calc(50% + 20px)
 
+  .section--asia
+    padding-bottom: 90px
+
 @media (max-width: 1439px)
   .page-header
     padding: 0 40px 0 40px
@@ -582,6 +585,9 @@
 
   .trip-switcher
     top: 130px
+
+  .section__trip-price
+    right: 26px
 
 @media (min-width: 767px)
   .section__comments
@@ -1189,6 +1195,7 @@
   .section__trip-price
     position: relative
     padding-right: 15px
+    left: 0
     &:after
       content: ''
       display: inline-block
