--- a/src/styl/_offers.styl
+++ b/src/styl/_offers.styl
@@ -45,7 +45,7 @@
     position: absolute
     width: 7px
     height: 7px
-    top: 36px
+    top: 33px
     left: 0
     background: url('images/offers/oval-blue.svg') center no-repeat
     background-size: cover
@@ -54,7 +54,7 @@
     content: ''
     position: absolute
     width: 1px
-    height: calc(100% - 48px)
+    height: calc(100% - 44px)
     top: 0
     left: 3px
     background: #29a5d0
@@ -126,6 +126,8 @@
   font-weight: 400
 
 .section__trip-price
+  position: absolute
+  right: 37px
   font-size: 18px
   line-height: 24px
   color: #29a5d0
@@ -204,13 +206,3 @@
 .section__trip-price--first
   display: none
 
-.section__trip-business
-  .section__trip-price--bus
-    display: block
-
-.section__trip-first
-  .section__trip-price--bus
-    display: none
-
-  .section__trip-price--first
-    display: block
