--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -1219,6 +1219,9 @@
     margin-top: 16px
     margin-left: 0
 
+  #siteseal
+    margin-bottom: 12px
+
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2)
   .page-header
@@ -1253,4 +1256,3 @@
   .popup-thank-you
     background: url('images/popup-bg@2x.png') center no-repeat
     background-size: cover
-
