--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -1383,3 +1383,12 @@ input:focus
   transform: translateX(-50%)
   z-index: 10
 
+.page-footer__text-container
+  display: flex
+  flex-direction: column
+  align-items: center
+
+#siteseal
+  display: inline-block
+  margin-bottom: 32px
+  text-align: center
