--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -185,6 +185,9 @@
   .section--offers
     margin-bottom: 64px
 
+  #siteseal
+    margin-bottom: 28px
+
 @media (min-width: 1023px) and (max-width: 1439px)
   .section__slide-item--second,
   .section__slide-item--third
@@ -588,6 +591,9 @@
 
   .section__trip-price
     right: 26px
+
+  #siteseal
+    margin-bottom: 12px
 
 @media (min-width: 767px)
   .section__comments
