--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -113,6 +113,8 @@
 
   .page-footer
     padding: 96px 40px 32px 40px
+    &--contacts
+      padding-top: 64px
 
   .page-footer__links
     flex-wrap: wrap
@@ -427,6 +429,8 @@
     padding: 64px 24px 32px 24px
     background: url('images/footer-bg-768@2x.png') center no-repeat
     background-size: cover
+    &--contacts
+      padding-top: 44px
 
   .section__btn-container--footer
     margin-bottom: 64px
@@ -601,6 +605,9 @@
 
   .trip-switcher
     top: 130px
+
+  .page-header--contact
+    min-height: 246px
 
   #siteseal
     margin-bottom: 12px
@@ -942,6 +949,9 @@
     width: 50%
     margin-right: 0
 
+  .socials__item
+    margin-right: 6px
+
   .page-footer__call
     margin-right: 0
 
@@ -1277,3 +1287,7 @@
   .popup-thank-you
     background: url('images/popup-bg@2x.png') center no-repeat
     background-size: cover
+
+@media (min-width: 612px) and (max-width: 767px)
+  .socials
+    margin-left: 160px
