--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -18,6 +18,9 @@ body
   &--home
     min-height: 600px
 
+  &--contact
+    min-height: 346px
+
 .page-header__toggle-btn
   display: none
   position: relative
@@ -759,6 +762,8 @@ body
   padding: 96px 152px 36px 152px
   background: url('images/footer-bg.png') center no-repeat
   background-size: cover
+  &--contacts
+    padding-top: 64px
 
 .page-footer__title
   font-size: 44px
@@ -853,8 +858,11 @@ body
 .socials-item--tw
   background: url('images/twitter.svg') center no-repeat
 
-.socials-item--go
-  background: url('images/google.svg') center no-repeat
+.socials-item--in
+  background: url('images/instagram.svg') center no-repeat
+
+.socials-item--ln
+  background: url('images/linkedin.svg') center no-repeat
 
 .page-footer__text
   font-size: 10px
