--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -468,6 +468,8 @@ body
   display: flex
   flex-direction: row
   align-items: flex-end
+
+.section__compare-table-container--home
   margin-bottom: 45px
 
 .column-head
@@ -1159,9 +1161,13 @@ input:focus
     top: 0
     background: #ffffff
 
-.search-form
+.search-form--index
   padding-left: 88px
   padding-right: 88px
+  input
+    padding: 32px 16px 16px 16px
+
+.search-form
   form
     display: flex
     flex-direction: row
@@ -1177,7 +1183,6 @@ input:focus
     line-height: 16px
     color: #797f92
     font-weight: 400
-    padding: 32px 16px 16px 16px
     box-sizing: border-box
     margin: 0
     border: 1px solid #dbdbdb
