--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -12,6 +12,8 @@
 @import "blocks/_process.styl"
 @import "blocks/_contact.styl"
 
+@import "pages/_europe.styl"
+
 @import "_style.styl"
 @import "_offers.styl"
 @import "_media.styl"
