--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -38,7 +38,7 @@
   .main-nav__item
     margin-right: 16px
 
-  .search-form
+  .search-form--index
     padding-left: 0
     padding-right: 0
 
@@ -67,7 +67,7 @@
   .section__btn-container--top-offers
     padding-left: 16px
 
-  .section__compare-table-container
+  .section__compare-table-container--home
     margin-left: 34px
 
   .section--clients
@@ -338,35 +338,34 @@
     width: 352px
     height: 480px
 
-  .section__compare-table-container
-    margin-bottom: 31px
-
-  .column-cell
-    font-size: 12px
-    line-height: 16px
-    padding: 20px 16px
-
-  .column--first
-    width: 43%
-    .column-head
+  .section__compare-table-container--home
+    .column-cell
       font-size: 12px
       line-height: 16px
-      padding: 14px 16px
+      padding: 20px 16px
 
-      br
-        display: block
+    .column--first
+      width: 43%
+      .column-head
+        font-size: 12px
+        line-height: 16px
+        padding: 14px 16px
 
-  .column--second
-    width: 29%
-    .column-head
-      padding: 37px 22px
+        br
+          display: block
 
-    .column-cell
-      font-size: 16px
-      padding: 16px 23px
+    .column--second
+      width: 29%
+      .column-head
+        padding: 37px 22px
 
-  .section__compare-table-container
+      .column-cell
+        font-size: 16px
+        padding: 16px 23px
+
+  .section__compare-table-container--home
     margin-left: 29px
+    margin-bottom: 31px
 
   .section-container
     width: 744px
@@ -711,50 +710,49 @@
   .section-top-offers__call-text
     margin-bottom: 16px
 
-  .section__compare-table-container
+  .section__compare-table-container--home
     width: calc(100% + 16px)
     margin-left: 0
     position: relative
     right: 16px
     overflow-x: scroll
-
-  .column-cell
-    height: 52px
-    padding: 10px 15px
-    box-sizing: border-box
-
-  .column--first
-    width: 48%
-
-    .column-head
-      padding: 16px 15px
-
-  .column--second
-    width: 45%
-
-    .column-cell
-      padding: 10px 15px
-
-    .column-head
-      padding: 34px 4px
-      img
-        width: 122px
-        height: 14px
-
-  .column--third
-    width: 50%
     .column-cell
       height: 52px
+      padding: 10px 15px
+      box-sizing: border-box
 
-    .column-head
-      height: 66px
-      padding: 22px 15px 10px 15px
+    .column--first
+      width: 48%
 
-  .column--fourth
-    width: 50%
-    .column-head
-      height: 66px
-      padding-top: 20px
+      .column-head
+        padding: 16px 15px
+
+    .column--second
+      width: 45%
+
+      .column-cell
+        padding: 18px 15px
+
+      .column-head
+        padding: 34px 4px
+        img
+          width: 122px
+          height: 14px
+
+    .column--third
+      width: 50%
+      .column-cell
+        height: 52px
+
+      .column-head
+        height: 66px
+        padding: 22px 15px 10px 15px
+
+    .column--fourth
+      width: 50%
+      .column-head
+        height: 66px
+        padding-top: 20px
 
   .section__btn-container--compare
     padding-left: 0
