--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -11,6 +11,7 @@ body
   padding: 0 152px 0 152px
   background: url('images/header-bg.png') center no-repeat
   background-size: cover
+  overflow: hidden
   +respond-to-retina
     background: url('images/header-bg@2x.png') center no-repeat
     background-size: cover
