--- a/src/styl/pages/_europe.styl
+++ b/src/styl/pages/_europe.styl
@@ -332,6 +332,10 @@
       +respond-to(767px)
         border-radius: 0
 
+.search-form.search-form--europe
+  input
+    font-weight: 500
+
 .section__europe-call
   width: 360px
   padding: 24px 24px 32px 24px
