--- a/src/styl/_offers.styl
+++ b/src/styl/_offers.styl
@@ -3,6 +3,7 @@
   background: url('images/offers/offers-header-bg.png') center no-repeat
   background-size: cover
   min-height: 376px
+  overflow: visible
 
 .wrapper--offer
   padding-top: 84px
