--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -1118,7 +1118,7 @@ input:focus
   font-size: 48px
   line-height: 48px
   font-weight: 700
-  color: #fb5f43
+  color: #fc5245
 
 .section__title--popup-tnx
   color: #ffffff
