--- a/src/styl/pages/_europe.styl
+++ b/src/styl/pages/_europe.styl
@@ -420,3 +420,8 @@
 
 .text-black--lower
   text-transform: lowercase
+
+.popup-fast.popup-fast--europe
+  .popup__select
+    +respond-to(1023px)
+      right: 16px
