--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -4,6 +4,12 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+input
+  font-family: 'Montserrat', sans-serif
+  font-smoothing: antialiased
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
 .page-header
   min-height: 376px
   background: #1F2633
@@ -1247,7 +1253,7 @@ input:focus
     line-height: 16px
     font-weight: 700
     color: #ffffff
-    background: #fb5f43
+    background: #fc5245
     padding: 26px 24px 24px 24px
     border: none
     cursor: pointer
