--- a/src/styl/pages/_europe.styl
+++ b/src/styl/pages/_europe.styl
@@ -224,6 +224,9 @@
   box-shadow: 0 10px 24px 0 rgba(15,71,77,0.16)
   bottom: 143px
   right: 0
+  +respond-from(1920px)
+    bottom: 95px
+
   +respond-to(1439px)
     bottom: auto
     top: 272px
@@ -234,6 +237,7 @@
     margin-bottom: 24px
     left: 29px
     right: auto
+    top: auto
     bottom: 0
 
   +respond-to(767px)
