--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -4,7 +4,7 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-input
+input, button
   font-family: 'Montserrat', sans-serif
   font-smoothing: antialiased
   -webkit-font-smoothing: antialiased
@@ -1251,7 +1251,7 @@ input:focus
     width: 100%
     font-size: 12px
     line-height: 16px
-    font-weight: 700
+    font-weight: 600
     color: #ffffff
     background: #fc5245
     padding: 26px 24px 24px 24px
